@@ -103,6 +103,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - GwBasic                José Gabriel Moya Yangüela
 - Haskell                Dagit
 - HQ9+                   Benny Baumann
+- Icon                   Matt Oates
 - Ini                    Deguix
 - Inno                   Thomas Klinger
 - INTERCAL               Benny Baumann
@@ -177,6 +178,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - TCL                    Reid van Melle
 - thinBasic              Eros Olmi
 - TypoScript             Jan-Philipp Halle
+- Unicon                 Matt Oates
 - Uno IDL                Cedric Bosdonnat
 - VB                     Roberto Rossi
 - VB.NET                 Alan Juden
