@@ -15,9 +15,11 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.8
   -  Added language files
      * GwBasic (José Gabriel Moya Yangüela)
+     * Icon (Matt Oates)
      * MagikSF (Sjoerd van Leent)
      * Oz (Wolfgang Meyer)
      * q/kdb+ (Ian Roddis)
+     * Unicon (Matt Oates)
      * XBasic (José Gabriel Moya Yangüela)
   -  Improvements to language files (BenBE)
      * Major reworks and improvements to OCaml language file (BenBE)
